--- a/Css/index.css
+++ b/Css/index.css
@@ -19,7 +19,7 @@ body{
   
 
 
-    background: url(http://cdn.wallpaperhi.com/1920x1080/20120302/haunted%20house%201920x1080%20wallpaper_www.wallpaperhi.com_19.jpg) no-repeat center center fixed; 
+    background: url(../Imgs/haunted\ house\ 1920x1080\ wallpaper_www.wallpaperhi.com_19\ EDITED.png) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
