--- a/Css/index.css
+++ b/Css/index.css
@@ -9,23 +9,20 @@ html{
 	width:100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
-
 }
 
 body{
 	min-width:100%;
 	min-height:100%;
+}
 
-  
-
-
+#Background{
+    position:absolute;
     background: url(../Imgs/haunted\ house\ 1920x1080\ wallpaper_www.wallpaperhi.com_19\ EDITED.png) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
     background-blend-mode: darken, luminosity;
-}
-.NavButton{
-
+    width: 100%;
+    height: 100%;
+    filter: blur(13px);
+    transition: filter 2s;
 }
