--- a/Css/index2.css
+++ b/Css/index2.css
@@ -18,7 +18,7 @@ body{
 }
 #Background{
     position:absolute;
-    background: url('Background_index2.png') no-repeat center center fixed; 
+    background: url('../Imgs/Background_index2.png') no-repeat center center fixed; 
     background-size: cover;
     background-blend-mode: darken, luminosity;
     width: 100%;
