--- a/Css/index1.css
+++ b/Css/index1.css
@@ -36,3 +36,12 @@ body{
     z-index: -1;
     opacity: 0;
 }
+
+.JumpScare{
+    height: 10px;
+    position: relative;
+    top: 0px;
+    width:20px;
+    z-index: 4;
+    opacity:0
+}
