--- a/Css/index1_2.css
+++ b/Css/index1_2.css
@@ -1,3 +1,23 @@
+*{
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
+	text-align: center;
+}
+
+html{
+	width:100%;
+	height:100%;
+	font-family: 'Open Sans', sans-serif;
+
+}
+
+body{
+	min-width:100%;
+	min-height:100%;
+	
+}
+
 #Background{
     position:absolute;
     background: url(../Imgs/the.jpg) no-repeat center center fixed; 
