--- a/Css/stairs.css
+++ b/Css/stairs.css
@@ -17,10 +17,9 @@ body{
 	min-height:100%;
 	
 }
-
 #Background{
     position:absolute;
-    background: url(../Imgs/the.jpg) no-repeat center center fixed; 
+    background: url(../Imgs/stirs.jpg) no-repeat center center fixed; 
     background-size: cover;
     background-blend-mode: darken, luminosity;
     width: 100%;
@@ -28,13 +27,18 @@ body{
     filter: blur(13px);
     transition: filter 2s;
 }
-
 #note{
-    top: 380px;
-    left:250px;
-    width: 70px;
-    position:absolute;
-    z-index: 3;
-    transform: rotate3d(2,5,3,180deg);
-
+    top: 800px;
+    left:50px;
+    filter: brightness(.04);
+    position: absolute;
+    width:100px;
+}
+#Door{
+    width: 390px;
+    height: 550px;
+    position: absolute;
+    transform: translate(100%, -100%);
+    top: 68%;
+    left: 15vw;
 }
