--- a/Css/index1.css
+++ b/Css/index1.css
@@ -42,6 +42,8 @@ body{
     width: 100px;
     opacity: .5;
     transition:oppacity 30s;
+    cursor:default;
+
 
 }
 
@@ -55,5 +57,6 @@ body{
     transform: rotate3d(2, 0, 0, 60deg);
     filter: brightness(0.3);
 }
+
 
 
