--- a/Css/index2_3.css
+++ b/Css/index2_3.css
@@ -52,12 +52,12 @@ body{
     transform: rotate3d(4, 1, 9, 96deg);
 }
 #note4{
-	width: 41px;
+    width: 41px;
     position: absolute;
     top: 414px;
-    left: 1528px;
+    left: 1500.9px;
     filter: brightness(.3);
-    transform: rotate3d(1, 3, 8, 90deg);
+    transform: rotate3d(1, 3, 8, 90deg)
 }
 #note5{
 	width: 41px;
@@ -66,4 +66,18 @@ body{
     left: 1260px;
     filter: brightness(.05);
     transform: rotate3d(1, 3, 8, 182deg);
+}
+#Door {
+    width: 6.9vw;
+    height: 62.7vh;
+    position: absolute;
+    transform: translate(50%, -50%) matrix3d(1, -0.07, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    top: 52.6%;
+    right: 3.5%;
+    background: url(../Imgs/Index3.jpg)no-repeat center center fixed;
+    background-size: cover;
+    background-blend-mode: darken, luminosity;
+    box-shadow: inset rgb(129 0 0 / 66%) -1px -2px 20px 9px;
+    cursor: help;
+    opacity: 0.7;
 }
