--- a/Css/index3.css
+++ b/Css/index3.css
@@ -27,3 +27,34 @@ body{
     filter: blur(13px);
     transition: filter 2s;
 }
+#note1{
+    position: absolute;
+    width: 2.6%;
+    left: 40%;
+    top: 50.2%;
+    transform: translate(50%,-50%) matrix3d(2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 5);
+	filter: brightness(0.4);
+}
+#note2{
+    position: absolute;
+    width: 2.6%;
+    left: 50%;
+    top: 54.2%;
+    transform: translate(50%,-50%) matrix3d(1.2, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 1, 0, 0, 0, 0, 2);
+    filter: brightness(0.4);
+}
+#note3{
+    position: absolute;
+    width: 2.6%;
+    left: 38%;
+    top: 45.2%;
+    transform: translate(50%,-50%) matrix3d(3, 0, 0, 0, 0, -3, 0, 0, 0, 0, 1, 0, 0, 0, 0, 11.1);
+    filter: brightness(0.4) blur(0.5px);
+}
+#note4{
+    position: absolute;
+    width: 2.6%;
+    left: 40%;
+    top: 55.2%;
+    transform: translate(50%,-50%) matrix3d(2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 5);
+}
