--- a/Css/index.css
+++ b/Css/index.css
@@ -3,8 +3,8 @@
 	padding: 0px;
 	box-sizing: border-box;
 	text-align: center;
+    user-select: none;
 }
-
 html{
 	width:100%;
 	height:100%;
@@ -45,6 +45,7 @@ body{
     transition: box-shadow 1s;
     border-radius: 4px;
     transform: translate(50%,-50%);
+    z-index:-1;
 }
 
 /*
@@ -58,11 +59,13 @@ body{
     transition: box-shadow 1s;
     border-radius: 4px;
     transform: translate(50%,-50%);
+    z-index:-1;
 }
 */
 #Door:hover{
     cursor: pointer;
     box-shadow: rgb(138,3,3) -4px 0px 20px 8px;
+    z-index:-1;
 }
 
 #note{
@@ -71,6 +74,7 @@ body{
     top:550px;
     left:950px;
     transform: rotate(90deg);
+    z-index:-1;
 }
 /*
 #note{
@@ -79,5 +83,6 @@ body{
     top: 60%;
     left: 57%;
     transform: rotate(90deg) translate(50%, -50%);
+    z-index:-1;
 }
 */
