--- a/Css/index1.css
+++ b/Css/index1.css
@@ -3,8 +3,8 @@
 	padding: 0px;
 	box-sizing: border-box;
 	text-align: center;
+    user-select: none;
 }
-
 html{
 	width:100%;
 	height:100%;
@@ -36,6 +36,7 @@ body{
     width:65px;
     opacity: 0;
     cursor:pointer;
+    z-index:-1;
 }
 /*
 #Door {
@@ -45,6 +46,7 @@ body{
     right: 4.3%;
     width: 3.9vw;
     transform: translate(50%,-50%);
+    z-index:-1;
 }
 */
 
@@ -55,6 +57,7 @@ body{
     opacity: .5;
     transition:oppacity 30s;
     cursor:default;
+    z-index:-1;
 }
 /*
 #scare{
@@ -65,6 +68,7 @@ body{
     transition: oppacity 30s;
     background: red;
     transform: translate(50%, -50%);
+    z-index:-1;
 }
 */
 #fakenote{
@@ -74,6 +78,7 @@ body{
     width: 95px;
     transform: rotate3d(2, 0, 0, 60deg);
     filter: brightness(0.3);
+    z-index:-1;
 }
 
 /*
@@ -84,5 +89,6 @@ body{
     width: 10vh;
     transform: rotate3d(2, 0, 0, 60deg) translate(50%,-50%);
     filter: brightness(0.3);
+    z-index:-1;
 }
 */
