--- a/Css/index1_2.css
+++ b/Css/index1_2.css
@@ -3,8 +3,8 @@
 	padding: 0px;
 	box-sizing: border-box;
 	text-align: center;
+    user-select: none;
 }
-
 html{
 	width:100%;
 	height:100%;
@@ -36,5 +36,5 @@ body{
     position:absolute;
     z-index: 3;
     transform: rotate3d(2,5,3,180deg);
-
+    z-index:-1;
 }
