--- a/Css/index2.css
+++ b/Css/index2.css
@@ -2,9 +2,9 @@
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
-	filter: contrast(1.2) brightness(0.8);
+	text-align: center;
+    user-select: none;
 }
-
 html{
 	width:100%;
 	height:100%;
@@ -33,10 +33,11 @@ body{
 	left:444px;
 	top: 88px;
 	opacity: 0;
+    z-index:-1;
 }
 #jump{
 	opacity: 0;
-
+    z-index:-1;
 }
 #note1{
     width: 90px;
@@ -45,6 +46,7 @@ body{
     left: 404px;
     top: 77.4%;
     transform: rotate3d(13, 0, -5, 60deg);
+    z-index:-1;
 }
 
 #note2{
@@ -57,6 +59,7 @@ body{
     transition: opacity 2s;
     transform: rotate3d(193, 0, 0, 22deg);
     filter: brightness(0.33);
+    z-index:-1;
 }
 
 #note3{
@@ -67,6 +70,7 @@ body{
     top: 69%;
     transform: rotate3d(135, -24, 14, 60deg);
     filter: brightness(0.36);
+    z-index:-1;
 }
 
 #Door{
@@ -78,5 +82,5 @@ body{
     z-index: -1;
     box-shadow: #a36f2252 -4px 0px 20px 19px;
     cursor: pointer;
-    
+    z-index:-1;
 }
