--- a/Css/index2_3.css
+++ b/Css/index2_3.css
@@ -3,8 +3,8 @@
 	padding: 0px;
 	box-sizing: border-box;
 	text-align: center;
+    user-select: none;
 }
-
 html{
 	width:100%;
 	height:100%;
@@ -33,7 +33,7 @@ body{
     left: 5px;
     filter: brightness(.06);
     transform: rotate3d(1, 3, 8, 1deg);
-
+    z-index:-1;
 }
 #note2{
 	width: 41px;
@@ -42,6 +42,7 @@ body{
     left: 962px;
     transform: rotate3d(2, 6, 8, 200deg);
     filter: brightness(0.2);
+    z-index:-1;
 }
 #note3{
 	width: 90px;
@@ -50,6 +51,7 @@ body{
     left: 538px;
     filter: brightness(.3);
     transform: rotate3d(4, 1, 9, 96deg);
+    z-index:-1;
 }
 #note4{
     width: 41px;
@@ -57,7 +59,8 @@ body{
     top: 414px;
     left: 1500.9px;
     filter: brightness(.3);
-    transform: rotate3d(1, 3, 8, 90deg)
+    transform: rotate3d(1, 3, 8, 90deg);
+    z-index:-1;
 }
 #note5{
 	width: 41px;
@@ -66,7 +69,9 @@ body{
     left: 1260px;
     filter: brightness(.05);
     transform: rotate3d(1, 3, 8, 182deg);
+    z-index:-1;
 }
+
 #Door {
     width: 6.9vw;
     height: 62.7vh;
@@ -80,4 +85,5 @@ body{
     box-shadow: inset rgb(129 0 0 / 66%) -1px -2px 20px 9px;
     cursor: help;
     opacity: 0.7;
+    z-index:-1;
 }
