--- a/Css/index3.css
+++ b/Css/index3.css
@@ -3,7 +3,9 @@
 	padding: 0px;
 	box-sizing: border-box;
 	text-align: center;
+	user-select: none;
 }
+
 
 html{
 	width:100%;
@@ -34,6 +36,7 @@ body{
     top: 50.2%;
     transform: translate(50%,-50%) matrix3d(2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 5);
 	filter: brightness(0.4);
+	z-index:-1;
 }
 #note2{
     position: absolute;
@@ -42,6 +45,7 @@ body{
     top: 54.2%;
     transform: translate(50%,-50%) matrix3d(1.2, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 1, 0, 0, 0, 0, 2);
     filter: brightness(0.4);
+	z-index:-1;
 }
 #note3{
     position: absolute;
@@ -50,6 +54,7 @@ body{
     top: 45.2%;
     transform: translate(50%,-50%) matrix3d(3, 0, 0, 0, 0, -3, 0, 0, 0, 0, 1, 0, 0, 0, 0, 11.1);
     filter: brightness(0.4) blur(0.5px);
+	z-index:-1;
 }
 #note4{
     position: absolute;
@@ -58,6 +63,7 @@ body{
     top: 44.2%;
     transform: translate(50%,-50%) matrix3d(2, 0, 0, 0, 0, -4, 0, 0, 0, 0, 1, 0, 0, 0, 0, 7);
     filter: brightness(0.4) blur(2.7px);
+	z-index:-1;
 }
 #Door{
 	position: absolute;
@@ -69,4 +75,5 @@ body{
     filter: blur(66px) brightness(1);
     background: #910808;
     cursor: zoom-in;
+	z-index:-1;
 }
