--- a/Css/stairs.css
+++ b/Css/stairs.css
@@ -3,6 +3,7 @@
 	padding: 0px;
 	box-sizing: border-box;
 	text-align: center;
+    user-select: none;
 }
 
 html{
@@ -26,6 +27,7 @@ body{
     height: 100%;
     filter: blur(13px);
     transition: filter 2s;
+
 }
 #note{
     top: 800px;
@@ -33,6 +35,7 @@ body{
     filter: brightness(.04);
     position: absolute;
     width:100px;
+    z-index:-1;
 }
 #Door{
     width: 390px;
@@ -41,5 +44,6 @@ body{
     transform: translate(100%, -100%);
     top: 68%;
     left: 15vw;
-    cursor:pointer
+    cursor:pointer;
+    z-index:-1;
 }
